--- a/example.config
+++ b/example.config
@@ -22,4 +22,5 @@
 # *Subs, to search for subtitle files
 # *Files, to search for files only
 # *All, to search for anything
-# Default: *All
+# Default: *Files
+#extensions = extension1, extension2, ...
