--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [fileTypes]
 # video file types
-videoExtensions = asf,avi,flv,mkv,mp4,wmv
+videoExtensions = asf, avi, flv, mkv, mp4, wmv
 
 # subtitle file types
-subExtensions = sami,srt
+subExtensions = sami, srt, sub
